@@ -2,6 +2,7 @@ PHP 4.0                                                                    NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 
 ?? ?? ????, Version 4.0 Beta 4
+- Removed select(), fd_set() and fd_isset() - will be reimplemented soon! (Thies)
 - Improved Win32 performance significantly by using different mutexes (Zeev,
   TSRM library)
 - Made quotemeta() and preg_quote() binary-safe. (Andrei)
